--- a/client-module/client/src/main/resources/languages/en.properties
+++ b/client-module/client/src/main/resources/languages/en.properties
@@ -186,3 +186,4 @@
 100001=Contract execute error
 100002=Contract address not exist
 100003=Create contract tx error
+100004=illegal contract address
