improve RPC interface of contract module

--- a/client-module/client/src/main/resources/languages/en.properties
+++ b/client-module/client/src/main/resources/languages/en.properties
@@ -189,3 +189,4 @@
 100002=Contract address not exist
 100003=Create contract tx error
 100004=illegal contract address
+100005=Non-contractual transaction
